--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "Template",
-  "version": "1.0.0",
-  "description": "Gulp. Slim, Sass, JS. Needs coffee",
+  "name": "frontend_template",
+  "version": "1.1.0",
+  "description": "Gulp. Slim, Sass, JS, CoffeeScript boilerplate. Needs coffee for build",
   "author": "VetLee",
-  "license": "ISC",
-  "dependencies": {},
-  "devDependencies": {
-    "browser-sync": "^2.14.*",
+  "license": "MIT",
+
+  "_fresh-dep": "05.01.2017",
+  "dependencies": {
+    "browser-sync": "^2.18.*",
     "gulp": "^3.9.*",
     "gulp-autoprefixer": "^3.1.*",
+    "gulp-imagemin": "^3.1.*",
+    "gulp-clean-css": "^2.3.*",
     "gulp-rigger": "^0.5.*",
-    "gulp-sass": "^2.3.*",
     "gulp-slim": "^0.3.*",
-    "gulp-watch": "^4.3.*"
+    "gulp-coffee": "^2.3.*",
+    "gulp-sass": "^3.0.*",
+    "gulp-sourcemaps": "^1.9.*",
+    "gulp-uglify": "^2.0.*",
+    "gulp-watch": "^4.3.*",
+    "imagemin-pngquant": "^5.0.*",
+    "rimraf": "^2.5.*"
   }
 }
